--- a/templates/layouts/jobSection.html.twig
+++ b/templates/layouts/jobSection.html.twig
@@ -136,7 +136,7 @@
         </div>
 
         <div class="btn-box">
-            <a href="#" class="theme-btn btn-style-seven">Load More Listing</a>
+            <a href="{{ path('annonces_all') }}" class="theme-btn btn-style-seven">Load More Listing</a>
         </div>
     </div>
 </section>
