--- a/templates/layouts/banner.html.twig
+++ b/templates/layouts/banner.html.twig
@@ -24,7 +24,7 @@
                                 </div>
                                 <!-- Form Group -->
                                 <div class="form-group col-lg-3 col-md-12 col-sm-12 btn-box">
-                                    <button type="submit" class="theme-btn btn-style-seven"><span class="btn-title">Touver un emploi</span></button>
+                                    <a href="{{ path('annonces_all') }}" class="theme-btn btn-style-seven"><span class="btn-title">Touver un emploi</span></a>
                                 </div>
                             </div>
                         </form>
@@ -37,11 +37,11 @@
                 <div class="image-box">
                     <div class="row">
                         <div class="column col-lg-6 col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="1500ms">
-                            <figure class="image anm" data-speed-x="2"><img src="images/resource/banner-img-4.png" alt=""></figure>
+                            <figure class="image anm" data-speed-x="2"><img src="{{ asset('images/resource/banner-img-4.png') }}" alt=""></figure>
                         </div>
                         <div class="column col-lg-6 col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="2000ms">
-                            <figure class="image anm" data-speed-x="2"><img src="images/resource/banner-img-5.png" alt=""></figure>
-                            <figure class="image anm" data-speed-x="2"><img src="images/resource/banner-img-6.png" alt=""></figure>
+                            <figure class="image anm" data-speed-x="2"><img src="{{ asset('images/resource/banner-img-5.png')}}" alt=""></figure>
+                            <figure class="image anm" data-speed-x="2"><img src="{{ asset('images/resource/banner-img-6.png') }}" alt=""></figure>
                         </div>
                     </div>
 
