--- a/templates/profile/_cv_form.html.twig
+++ b/templates/profile/_cv_form.html.twig
@@ -15,7 +15,7 @@
     </div>
     {% endif %}
     <div class="form-group col-lg-6 col-md-12">
-        <button class="theme-btn btn-style-one" type="submit">Enregistrer</button>
+        <button class="theme-btn btn-style-one small" type="submit">Enregistrer</button>
     </div>
 </div>
 {{ form_end(form, {'render_rest': false}) }}
