--- a/templates/layouts/blogSection.html.twig
+++ b/templates/layouts/blogSection.html.twig
@@ -2,8 +2,8 @@
 <section class="news-section-two style-two">
     <div class="auto-container">
         <div class="sec-title text-center">
-            <h2>Recent News Articles</h2>
-            <div class="text">Fresh job related news content posted each day.</div>
+            <h2>Handi'Actu</h2>
+            <div class="text">L'actualité sur l'emploi et le handicap</div>
         </div>
 
         <div class="row wow fadeInUp">
