--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -1,7 +1,9 @@
 {% if app.request.attributes.get('_route')  in
     [
         'annonces_all',
-        'blog_show'
+        'blog_show',
+        'annonce_page',
+        'stands_all'
     ]
 %}
 <!-- Header Span -->
