--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -46,6 +46,7 @@
 #cv_experience_debut_time_hour,
 #cv_formation_fin_time_hour,
 #cv_experience_fin_time_hour,
+#annonce_dateCloture_time_hour,
 #forum_date_fermeture_candidature_time_hour{
   display: none;
 }
