--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -13,6 +13,7 @@
             <li><a href="{{ path('cvtheque') }}"><i class="la la-bookmark-o"></i>CVthèque</a></li>
             <li><a href="{{ path('blog_index') }}"><i class="la la-box"></i>Actualités</a></li>
             <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
+            <li><a href="{{ path('faq_index') }}"><i class="la la-question"></i>FAQ</a></li>
             <li><a href="{{ path('stand_index') }}"><i class="la la-bell"></i>Stands</a></li>
             <li><a href="{{ path('pavillon_index') }}"><i class="la la-lock"></i>Pavillons</a></li>
             <li><a href=""><i class="la la-user-alt"></i>View Profile</a></li>
