--- a/templates/dashboard/sidebar-candidat.html.twig
+++ b/templates/dashboard/sidebar-candidat.html.twig
@@ -10,7 +10,7 @@
                 {% else %}<a href="{{ path('profile_new') }}"><i class="la la-user-tie"></i>Créer mon profile</a>{% endif %}
             </li>
             <li><a href="candidate-dashboard-resume.html"><i class="la la-file-invoice"></i>Mes rendez-vous</a></li>
-            <li><a href="candidate-dashboard-applied-job.html"><i class="la la-briefcase"></i>Mes offres d'emploi</a></li>
+            <li><a href="{{ path('annonce_favoris') }}"><i class="la la-briefcase"></i>Mes offres d'emploi</a></li>
             <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Ma sélection</a></li>
             <li><a href="{{ path('file_index') }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
             {#<li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
