--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Talents Handicap{% endblock %}
 
 {% block body %}
     {{ include('layouts/banner.html.twig') }}
-    {{ include('layouts/jobSection.html.twig') }}
+    {{ include('layouts/StandsSection.html.twig') }}
     {{ include('layouts/blogSection.html.twig') }}
 {% endblock %}
