--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -1,9 +1,12 @@
 {% if app.request.attributes.get('_route')  in
     [
         'annonces_all',
-        'blog_show',
         'annonce_page',
-        'stands_all'
+        'blog_show',
+        'stands_all',
+        'stand_page',
+        'forums_all',
+        'forum_page'
     ]
 %}
 <!-- Header Span -->
