--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
     {{ include('layouts/banner.html.twig') }}
+    {{ include('layouts/HowSection.html.twig') }}
     {{ include('layouts/StandsSection.html.twig') }}
     {{ include('layouts/AgendaForums.html.twig') }}
     {{ include('layouts/blogSection.html.twig') }}
     {{ include('layouts/recruteursSlider.html.twig') }}
+    {{ include('layouts/newsletter.html.twig') }}
 {% endblock %}
