--- a/templates/layouts/recruteursSlider.html.twig
+++ b/templates/layouts/recruteursSlider.html.twig
@@ -1,6 +1,9 @@
 <!--Clients Section-->
 <section class="clients-section-two">
     <div class="sponsors-outer wow fadeInUp">
+        <div class="sec-title text-center">
+            <h2>Employeurs partenaires à ce jour </h2>
+        </div>
         <!--Sponsors Carousel-->
         <ul class="sponsors-carousel owl-carousel owl-theme">
             {% for stand in stands %}
