--- a/templates/home/stands.html.twig
+++ b/templates/home/stands.html.twig
@@ -32,27 +32,32 @@
                         <div class="row">
                             <!-- Company Block Four -->
                             {% for stand in stands %}
-                            <div class="company-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                                <div class="inner-box">
-                                    <button class="bookmark-btn"><span class="flaticon-bookmark"></span></button>
-                                    <span class="featured">{{ stand.type }}</span>
-                                    <span class="company-logo">
-                                        {% if stand.logo %}
-                                            {% for logo in stand.logo %}
-                                                <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
-                                                        {% else %}
-                                                <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
-                                            {% endfor %}
+
+                                <div class="company-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                                    <div class="inner-box">
+                                        <a href="{{ path('stand_page', {'slug': stand.slug}) }}">
+                                        <button class="bookmark-btn"><span class="flaticon-bookmark"></span></button>
+                                        <span class="featured">{{ stand.type }}</span>
+                                        <span class="company-logo">
+                                            {% if stand.logo %}
+                                                {% for logo in stand.logo %}
+                                                    <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
+                                                            {% else %}
+                                                    <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
+                                                {% endfor %}
+                                            {% endif %}
+                                        </span>
+                                        <h4>{{ stand.nom }}</h4>
+                                        <ul class="job-info">
+                                            <li><span class="icon flaticon-map-locator"></span> London, UK</li>
+                                            <li><span class="icon flaticon-briefcase"></span> Accounting / Finance</li>
+                                        </ul>
+                                        {% if stand.annonces|length >= 1 %}
+                                        <a href="{{ path('stand_page', {'slug': stand.slug}) }}" class="job-type">{{ pluralize(stand.annonces|length, 'annonce') }}</a>
                                         {% endif %}
-                                    </span>
-                                    <h4><a href="#">{{ stand.nom }}</a></h4>
-                                    <ul class="job-info">
-                                        <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                        <li><span class="icon flaticon-briefcase"></span> Accounting / Finance</li>
-                                    </ul>
-                                    <a href="{{ path('stand_page', {'slug': stand.slug}) }}" class="job-type">{{ pluralize(stand.annonces|length, 'annonce') }}</a>
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
                             {% endfor %}
                         </div>
 
