--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Main Footer -->
-<footer class="main-footer alternate">
+<footer class="main-footer alternate3">
     <div class="auto-container">
         <!--Widgets Section-->
         <div class="widgets-section">
